# community

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  rustfmt.toml
.github/workflows/: db-mockup  db-mockup.yml  fmt.yml  test-server.yml  test.yml
assets/app/: captcha.js  components.js
assets/scripts/: global-scripts.min.js  htmx-head.min.js  htmx-loading.min.js  htmx-remove-me.min.js
assets/styles/: globals.css  homepage.css
client/: .eslintrc.json  esbuild.config.mjs  globals.d.ts  package.json  tsconfig.json
client/src/: anchor-tags.ts  checkbox.ts  crop.ts  dialog.ts  dropdown.ts  htmx.ts  index.ts  navigation-progress.ts  notifications.ts  reduced-motion.ts  scroll_up.ts  utils.ts
crud_macro/: Cargo.toml
crud_macro/src/: lib.rs
diagrams/: API_ENDPOINTS.drawio.html  Database_Schema.drawio  Untitled Diagram.drawio  Untitled Diagram.drawio.html
scripts/__test-utils__/: ci_migrations.sh  migrations.sh
src/: catchers.rs  csp.rs  env.rs  lib.rs  main.rs  responders.rs  static_files.rs
src/catchers/: mod.rs
src/controllers/: api.rs  mod.rs  rate_limiter.rs  recaptcha.rs  validate.rs
src/helpers/: db.rs  handlebars.rs  macro_uri.rs  mod.rs  responders.rs
src/models/: api.rs  captcha.rs  mod.rs  query.rs  rate_limiter.rs
src/routes/: mod.rs
src/views/: index.html.hbs
src_templates/catchers/: 404.html.hbs
src_templates/layouts/: community.html.hbs  main.html.hbs
src_templates/pages/: community.html.hbs  discover.html.hbs
template_minifier/: Cargo.toml
templates/: index.html.hbs
tests/: rate_limit.rs
(+359 files in other folders)
